#US-14 As an authenticated user, I want to be able to delete my comments, so that I can remove my previous opinion of the cultural site
#US-26 As an authenticated user, I want to be able to edit my previous comments, so that I can edit my opinion of a cultural site

-angular component testing

--- a/serbioneer-front/src/app/components/comment/comment.component.html
+++ b/serbioneer-front/src/app/components/comment/comment.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col comment-author">{{comment.name}} {{comment.surname}}:</div>
     <div class="col" *ngIf="activeComment && userComment">
-      <button mat-icon-button color="primary" (click)="editComment()">
+      <button mat-icon-button color="primary" (click)="editComment()" id="edit-btn">
         <mat-icon>create</mat-icon>
       </button>
       <button mat-icon-button color="warn" (click)="deleteComment()">
@@ -15,7 +15,7 @@
   <div *ngIf="editing">
     <form (ngSubmit)="saveComment($event)">
       <input type="text" [value]="inputText" name="inputText">
-      <button mat-icon-button type="submit">
+      <button mat-icon-button type="submit" id="save-btn">
         <mat-icon>save</mat-icon>
       </button>
     </form>
