Edit cultural site
Angular unit tests written for editing cultural site.

--- a/serbioneer-front/src/app/components/new-cultural-site/new-cultural-site.component.html
+++ b/serbioneer-front/src/app/components/new-cultural-site/new-cultural-site.component.html
@@ -29,7 +29,7 @@
                     <div class="form-group">
                         <mat-form-field appearance="fill" class="form-field">
                             <mat-label>Cultural site description</mat-label>
-                            <textarea class="textBox" matInput placeholder="Description" formControlName ="description"> </textarea>
+                            <textarea id="description-input" class="textBox" matInput placeholder="Description" formControlName="description"> </textarea>
                         </mat-form-field>
                     </div>
                 </div>
