--- a/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.html
+++ b/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.html
@@ -19,7 +19,7 @@
                 </button>
             </div>
             <div class="col-2" *ngIf="userIsLogged">
-                <button id = "subscribe-btn" mat-raised-button class="btn btn-purple" (click)="onChangeSubscription($event)">
+                <button id = "subscribe-btn" mat-raised-button class="btn btn-purple" (click)="onChangeSubscription()">
                     {{buttonValue}}
                 </button>
             </div>
@@ -77,7 +77,7 @@
                         [length]="news.totalElements" 
                         [pageSize]="news.size" 
                         [pageSizeOptions]="[1,2,5,10]"
-                        (page)="pageEventNews = $event; onPaginateChangeNews($event)">
+                        (page)="onPaginateChangeNews($event)">
                     </mat-paginator>
                 </ng-template>
                 <ng-template #noNews>
@@ -108,7 +108,7 @@
                         [length]="comments.totalElements" 
                         [pageSize]="comments.size" 
                         [pageSizeOptions]="[1,2,5,10]"
-                        (page)="pageEventComments = $event; onPaginateChangeComments($event)">
+                        (page)="onPaginateChangeComments($event)">
                     </mat-paginator>
                 </ng-template>
                 <ng-template #noComments>
