--- a/serbioneer-front/src/styles.sass
+++ b/serbioneer-front/src/styles.sass
@@ -71,5 +71,9 @@ td.mat-cell:last-of-type
 td.mat-cell:first-of-type
   padding-left: 24px !important
 
+.progress-bar
+  margin-top: -35px
+  margin-bottom: 35px
+
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap'
