--- a/serbioneer-front/src/app/components/admin/pending-comments/pending-comments.component.html
+++ b/serbioneer-front/src/app/components/admin/pending-comments/pending-comments.component.html
@@ -1,3 +1,6 @@
+<mat-progress-bar class="progress-bar" mode="indeterminate" 
+    *ngIf="progressBar">
+</mat-progress-bar>
 <div id="pending-comments-page">
   <div class="container">
     <div class="row">
