--- a/serbioneer-front/src/app/components/core/homepage/homepage.component.html
+++ b/serbioneer-front/src/app/components/core/homepage/homepage.component.html
@@ -1,4 +1,7 @@
-<div id = "homepage">
+<mat-progress-bar class="progress-bar" mode="indeterminate" 
+    *ngIf="progressBar">
+</mat-progress-bar>
+<div id="homepage">
     <div class="row">
         <!-- Category chips -->
         <div class="col-md-6">
