--- a/serbioneer-front/src/app/components/admin/pending-comments/approve-comment/approve-comment.component.html
+++ b/serbioneer-front/src/app/components/admin/pending-comments/approve-comment/approve-comment.component.html
@@ -16,13 +16,13 @@
       </div>
     </div>
     <div class="col comment-button">
-      <button mat-icon-button (click)="approveComment()" id="approve-comment-{{comment.id}}">
+      <button mat-icon-button class="btn" (click)="approveComment()" id="approve-comment-{{comment.id}}">
         <mat-icon class="green-icon">done</mat-icon>
       </button>
     </div>
     <div class="col comment-button">
-      <button mat-icon-button color="warn" (click)="declineComment()" id = "reject-comment-{{comment.id}}">
-        <mat-icon>clear</mat-icon>
+      <button mat-icon-button class="btn" (click)="declineComment()" id="reject-comment-{{comment.id}}">
+        <mat-icon class="red-icon">clear</mat-icon>
       </button>
     </div>
   </div>
