--- a/serbioneer-front/src/app/components/core/view-cultural-site/view-cultural-site.component.html
+++ b/serbioneer-front/src/app/components/core/view-cultural-site/view-cultural-site.component.html
@@ -30,10 +30,10 @@
         </div>
         <div class="row join" *ngIf="adminIsLogged">
             <div class="col">
-                <button id = "edit-cultural-site" mat-icon-button color="primary" (click)="editCulturalSite()">
+                <button id="edit-cultural-site" mat-icon-button color="primary" (click)="editCulturalSite()">
                     <mat-icon>create</mat-icon>
                 </button>
-                <button mat-icon-button color="warn" (click)="deleteCulturalSite()">
+                <button id="delete-cultural-site" mat-icon-button color="warn" (click)="deleteCulturalSite()">
                     <mat-icon>delete</mat-icon>
                 </button>
             </div>
