Only required inputs left

--- a/serbioneer-front/src/app/components/core/homepage/homepage.component.html
+++ b/serbioneer-front/src/app/components/core/homepage/homepage.component.html
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Filter by name</mat-label>
-                    <input id = "cultural-site-name-input" (keyup)="onKey($event)" matInput placeholder="Ex. Exit">
+                    <input id = "cultural-site-name-input" (keyup)="onKey($event)" matInput placeholder="Ex. Civijada">
                 </mat-form-field>
             </div>
         </div>
