--- a/serbioneer-front/src/app/components/core/view-cultural-site/comment/comment.component.html
+++ b/serbioneer-front/src/app/components/core/view-cultural-site/comment/comment.component.html
@@ -1,6 +1,6 @@
 <div class="comment" *ngIf="activeComment">
   <div class="row">
-    <div class="col comment-author">{{comment.name}} {{comment.surname}}:</div>
+    <div class="col-3 comment-author">{{comment.name}} {{comment.surname}}:</div>
     <div class="col" *ngIf="activeComment && userComment">
       <button mat-icon-button color="primary" (click)="editComment()" id="edit-btn">
         <mat-icon>create</mat-icon>
@@ -13,11 +13,19 @@
   <div class="comment-about">about {{comment.culturalSiteName}}</div>
   <div class="comment-text" *ngIf="!editing">{{comment.text}}</div>
   <div *ngIf="editing">
-    <form (ngSubmit)="saveComment($event)">
-      <input id = "edit-comment-input" type="text" [value]="inputText" name="inputText">
-      <button id = "save-comment" mat-icon-button type="submit">
-        <mat-icon>save</mat-icon>
-      </button>
+    <form class="comment-edit" [formGroup]="editCommentForm" (ngSubmit)="saveComment()">
+      <div class="form-group">
+        <mat-form-field id="edit-comment-form-field" appearance="fill" class="form-field">
+            <mat-label>Comment</mat-label>
+            <input 
+                matInput id="edit-comment-input" class="type-comment" name="editCommentText"
+                formControlName="text">
+            <mat-error id="edit-comment-error" *ngIf="editCommentForm.get('text')?.invalid">{{getTextErrorMessage()}}</mat-error>
+        </mat-form-field>
+        <button id = "save-comment" mat-icon-button type="submit">
+          <mat-icon>save</mat-icon>
+        </button>
+      </div>
     </form>
   </div>
   <div class="comment-images" *ngIf="comment.images.length > 0">
