Unnecessary interfaces removed

--- a/serbioneer-front/src/app/components/auth-user/newsfeed/newsfeed.component.html
+++ b/serbioneer-front/src/app/components/auth-user/newsfeed/newsfeed.component.html
@@ -14,7 +14,7 @@
                 <mat-card>
                         <mat-card-content class="empty-newsfeed">
                                 <h3>
-                                You are not subscribed to any cultural sites.<br>
+                                There is no news to be viewed at the moment.<br>
                                 To view news, try subscribing to some cultural sites!
                                 </h3>
                         </mat-card-content>
