--- a/serbioneer-front/src/app/components/core/view-cultural-site/add-news-article/add-news-article.component.html
+++ b/serbioneer-front/src/app/components/core/view-cultural-site/add-news-article/add-news-article.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Add news about {{data.culturalSite.name}}</h2>
+<h2 mat-dialog-title>Add news about {{data.culturalSiteName}}</h2>
 
 <mat-dialog-content>
     <form [formGroup]="newsForm" (ngSubmit)="onSubmit()">
