--- a/serbioneer-front/src/app/components/core/view-cultural-site/view-cultural-site.component.sass
+++ b/serbioneer-front/src/app/components/core/view-cultural-site/view-cultural-site.component.sass
@@ -2,21 +2,11 @@
 
 .rating
     text-align: right
-
 .view-cultural-site
     margin: 10px
-
 .description
     white-space: pre-wrap
     margin-left: 3px
-
-.type-comment
-    width: 100%
-
-.image-preview
-    margin: 5px
-    height: 25%
-    width: 25%
 .join
     margin-top: -10px
 .divide
@@ -29,8 +19,6 @@
     margin-top: 8px
 .site-description
     font-size: 14px
-.site-news
-    margin-left: 40px
 .subtitle-align-news
     padding-left: 250px
 .subtitle-align-comments
@@ -44,33 +32,13 @@
 .rate-site
     font-size: 16px
     margin-right: 10px
-.comment-div
-    align-items: center
-.comment-write
-    font-size: 20px
-    margin-left: 15px
-.add-box
-    border: 1px solid lightgray
-    border-radius: 4px
-    padding-bottom: 13px
-.comment-btn
-    display: flex
-.comment-group
-    margin-bottom: 0
-    margin-top: 15px
-#new-comment-form-field
-    min-width: 100% !important
-#new-comment-input
-    min-width: 100% !important
-.file-title
-    font-size: 20px
-    margin-top: 5px
-.file-group
-    justify-content: center
-    text-align: left
 .site-image-content
     padding: 25px 60px
 ngb-rating
     font-size: 20px
+h6
+    font-size: 1rem
+
+//ne koristi se
 app-comment
     width: 100%
